refactor: use Math.clamp for bounded values